--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "axios": "^1.6.8",
+        "bookstore": "file:..",
+        "nodemon": "^3.1.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.1",
